--- a/json-rpc-server.cabal
+++ b/json-rpc-server.cabal
@@ -1,6 +1,6 @@
 name:                json-rpc-server
-version:             0.2.6.0
-x-revision:          8
+version:             0.2.6.1
+x-revision:          9
 license:             MIT
 license-file:        LICENSE
 category:            Network, JSON
@@ -37,14 +37,15 @@ flag demo
 library
   exposed-modules:     Network.JsonRpc.Server
   other-modules:       Network.JsonRpc.Types
-  build-depends:       base >=4.3 && <4.15,
-                       aeson >=0.6 && <1.6,
-                       deepseq >= 1.1 && <1.5,
-                       bytestring >=0.9 && <0.11,
-                       mtl >=2.2.1 && <2.3,
-                       text >=0.11 && <1.3,
-                       vector >=0.7.1 && <0.13,
-                       unordered-containers >=0.1 && <0.3
+  build-depends:
+    aeson                         >= 2.1.0 && < 2.2,
+    base                          >= 4.15.1 && < 4.17,
+    deepseq                       >= 1.4.5 && < 1.5,
+    bytestring                    >= 0.10.12 && < 0.11,
+    mtl                           >= 2.2.2 && < 2.3,
+    text                          >= 1.2.5 && < 1.3,
+    unordered-containers          >= 0.2.19 && < 0.3,
+    vector                        >= 0.13.0 && < 0.14
   hs-source-dirs:      src
   ghc-options:         -Wall
   other-extensions:    CPP,
