--- a/json-rpc-server.cabal
+++ b/json-rpc-server.cabal
@@ -37,10 +37,10 @@ flag demo
 library
   exposed-modules:     Network.JsonRpc.Server
   other-modules:       Network.JsonRpc.Types
-  build-depends:       base >=4.3 && <4.17,
+  build-depends:       base >=4.3,
                        aeson >=0.6 && <2.2,
                        deepseq >= 1.1 && <1.5,
-                       bytestring >=0.9 && <0.12,
+                       bytestring >=0.9,
                        mtl >=2.2.1 && <2.3,
                        text >=0.11 && <1.3,
                        vector >=0.7.1 && <0.13,
