--- a/json-rpc-server.cabal
+++ b/json-rpc-server.cabal
@@ -39,12 +39,12 @@ library
   other-modules:       Network.JsonRpc.Types
   build-depends:       base >=4.3,
                        aeson >= 2,
-                       deepseq >= 1.1 && <1.5,
+                       deepseq >= 1.1,
                        bytestring >=0.9,
                        mtl >=2.2.1,
                        text >=0.11,
-                       vector >=0.7.1 && <0.14,
-                       unordered-containers >=0.1 && <0.3
+                       vector >=0.7.1,
+                       unordered-containers >=0.1
   hs-source-dirs:      src
   ghc-options:         -Wall
   other-extensions:    CPP,
