--- a/json-rpc-server.cabal
+++ b/json-rpc-server.cabal
@@ -43,7 +43,7 @@ library
     bytestring                    >= 0.10.12 && < 0.11,
     deepseq                       >= 1.4.4 && < 1.5,
     text                          >= 1.2.4 && < 1.3,
-    mtl                           >= 2.2.2 && < 2.3,
+    mtl                           >= 2.2.2
     unordered-containers          >= 0.2.19 && < 0.3,
     vector                        >= 0.13.0 && < 0.14
   hs-source-dirs:      src
