--- a/json-rpc-server.cabal
+++ b/json-rpc-server.cabal
@@ -38,7 +38,7 @@ library
   exposed-modules:     Network.JsonRpc.Server
   other-modules:       Network.JsonRpc.Types
   build-depends:       base >=4.3,
-                       aeson > 2.2.2,
+                       aeson >= 2.2.2,
                        deepseq >= 1.1,
                        bytestring >=0.9,
                        mtl >=2.2.1,
